Fix Wrap Card

--- a/src/public/assets/css/creatorpost.css
+++ b/src/public/assets/css/creatorpost.css
@@ -51,3 +51,21 @@
 .card-inverse .btn {
     border: 1px solid rgba(0, 0, 0, .05);
 }
+
+.dotswrap{
+  text-overflow:ellipsis;
+  overflow:hidden;
+  display: -webkit-box !important;
+  -webkit-line-clamp: 2;
+  -webkit-box-orient: vertical;
+  white-space: normal;
+}
+
+.dotswrap3{
+  text-overflow:ellipsis;
+  overflow:hidden;
+  display: -webkit-box !important;
+  -webkit-line-clamp: 3;
+  -webkit-box-orient: vertical;
+  white-space: normal;
+}
